# dinorich

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile.backend  Dockerfile.frontend  README.md  RUN_GUIDE.md  docker-compose.yml  implementation_plan.md  monopoly-rules.markdown  nginx.conf  reference-images.txt  setup-firewall.bat  setup.bat  setup.sh  start-prod.bat  start-prod.sh  start.bat  start.sh
backend/: conftest.py  main.py  pyproject.toml  requirements.txt
backend/constants/: game_rules.py
backend/engine/: auction.py  bankruptcy.py  bot.py  cards.py  dice.py  game_initializer.py  jail.py  movement.py  property.py  tax.py  timer_manager.py  trade_manager.py  turn_manager.py
backend/persistence/: db.py  repository.py
backend/rooms/: manager.py
backend/schemas/: action.py  contracts.py  game.py  player.py  room.py
backend/scripts/: codegen.py
backend/services/: rate_limiter.py  session_manager.py
backend/sockets/: auction_events.py  chat_events.py  connection.py  events.py  game_events.py  helpers.py  property_events.py  qa_events.py  room_events.py  server.py  trade_events.py
backend/tests/: smoke_live_socket.py  test_auction.py  test_bankruptcy.py  test_bot.py  test_cards.py  test_dice.py  test_e2e_smoke.py  test_movement.py  test_property.py  test_qa_cards.py  test_qa_dice.py  test_qa_events.py  test_qa_timer.py  test_room_manager.py  test_trade_manager.py  test_turn_manager.py
backend/utils/: code_generator.py  input_validation.py  name_generator.py  security.py
docker/: Dockerfile
docs/: FULL_AUDIT_PLAN.md  GAME_DATA.md  (+3 more)
(+117 files in other folders)
